fix(Spinner): Default size too small

--- a/scss/components/_spinner.scss
+++ b/scss/components/_spinner.scss
@@ -10,7 +10,6 @@
 .spinner {
     position: relative;
     display: inline-block;
-    font-size: $font-size-base;
     border: 0.166667em solid rgba(0, 0, 0, 0.35);
     border-left-color: rgba(0, 0, 0, 0.175);
     animation: spin 1s infinite linear;
